--- a/client/src/style.css
+++ b/client/src/style.css
@@ -2,7 +2,7 @@
 
 /* Global Styles */
 :root {
-  --primary-color: #6baead;
+  --primary-color: #65c6ce;
   --dark-color: #333333;
   --light-color: #f4f4f4;
   --danger-color: #dc3545;
