--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,7 +14,7 @@
   --success-color: linear-gradient(
     63deg,
     rgba(62, 81, 81, 1) 45%,
-    rgba(222, 203, 164, 1) 100%
+    rgb(29, 35, 35) 100%
   );
 }
 
