--- a/client/src/App.css
+++ b/client/src/App.css
@@ -104,6 +104,7 @@ img {
   padding: 1rem;
   border: #ccc 1px dotted;
   margin: 0.7rem 0;
+  border-radius: 5px;
 }
 
 /* List */
@@ -305,6 +306,7 @@ img {
 /* Forms */
 input {
   margin: 1.2rem 0;
+  border-radius: 5px;
 }
 
 .form-text {
