--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,8 +28,8 @@ body {
   font-family: "Roboto", sans-serif;
   font-size: 1rem;
   line-height: 1.6;
-  background-color: #fff;
-  color: #333;
+  background-color: #242b2b;
+  color: white;
 }
 
 a {
@@ -204,6 +204,7 @@ img {
   margin-right: 0.5rem;
   transition: opacity 0.2s ease-in;
   outline: none;
+  border-radius: 5px;
 }
 
 .btn-link {
